<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_general_header">

        <EditTextPreference
            app:defaultValue="10"
            app:key="history_count"
            app:selectAllOnFocus="true"
            app:singleLine="true"
            app:title="@string/settings_key_history_count" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="vibrator"
            app:title="@string/settings_key_vibrator" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="free_input"
            app:summary="@string/settings_key_free_input_summary"
            app:title="@string/settings_key_free_input" />

        <EditTextPreference
            app:defaultValue="10"
            app:key="computation_accuracy"
            app:selectAllOnFocus="true"
            app:singleLine="true"
            app:summary="@string/settings_key_computation_accuracy_summary"
            app:title="@string/settings_key_computation_accuracy" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="auto_scientific_notation"
            app:title="@string/settings_key_auto_scientific_notation" />

        <EditTextPreference
            app:defaultValue="10000000000"
            app:dependency="auto_scientific_notation"
            app:key="scientific_notation_max"
            app:selectAllOnFocus="true"
            app:singleLine="true"
            app:title="@string/settings_key_scientific_notation_max" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_others_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="auto_update"
            app:title="@string/settings_key_auto_update" />

        <Preference
            app:key="check_update"
            app:title="@string/settings_key_check_update" />

    </PreferenceCategory>

</PreferenceScreen>
